--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,21 @@ services:
   - docker
 env:
   md_ignore: R1
+addons:
+  apt:
+    packages:
+      - ruby-full
 before_install:
 install:
   - pip install -r requirements.txt
+  - bundle install
 before_script:
   - >
       for file in `find . -maxdepth 2 -name "*.md"` ;  do
       markdownlint --ignore $md_ignore $file ;
       done
 script:
+  - inspec exec -b local ansible-fashion-police
   - cd test-role
   - molecule test
   - cd $TRAVIS_BUILD_DIR
