--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,196 @@
-molecule
-pymarkdownlint
-docker-py
+absl-py==0.1.13
+ansible==2.5.0
+# ansible-lint==3.4.19
+# anyconfig==0.9.1
+# appdirs==1.4.3
+# argo-ams-library==0.3.1
+# arrow==0.12.1
+# asn1crypto==0.24.0
+# astor==0.6.2
+# astroid==1.5.3
+# attrs==17.4.0
+# Babel==2.5.3
+# backports.functools-lru-cache==1.5
+# backports.ssl-match-hostname==3.5.0.1
+# backports.weakref==1.0.post1
+# bcrypt==3.1.4
+# beautifulsoup4==4.6.0
+# binaryornot==0.4.4
+# bleach==1.5.0
+# cached-property==1.4.0
+# Cerberus==1.1
+# certifi==2018.1.18
+# cffi==1.11.5
+# chardet==3.0.4
+# click==6.7
+# click-completion==0.2.1
+# cliff==2.11.0
+# cmd2==0.8.2
+# colorama==0.3.7
+# configobj==5.0.6
+# configparser==3.5.0
+# contextlib2==0.5.5
+# cookiecutter==1.5.1
+# creole==1.2
+# cryptography==2.2.2
+# cycler==0.10.0
+# debtcollector==1.19.0
+# decorator==4.1.1
+# deprecation==2.0
+# dictdiffer==0.7.0
+docker==2.7.0
+docker-compose==1.9.0
+docker-py==1.10.6
+docker-pycreds==0.2.2
+dockerpty==0.4.1
+# docopt==0.6.2
+# dogpile.cache==0.6.5
+# duplicity==0.7.12
+# enum34==1.1.6
+# extras==1.0.0
+# fasteners==0.14.1
+# fixtures==3.0.0
+# flake8==3.3.0
+# funcsigs==1.0.2
+# functools32==3.2.3.post2
+# future==0.16.0
+# futures==3.2.0
+# gast==0.2.0
+# git-url-parse==1.0.2
+# grpcio==1.10.0
+# h5py==2.7.1
+# html2text==2018.1.9
+# html5lib==0.9999999
+# httplib2==0.11.1
+# idna==2.6
+# ipaddress==1.0.22
+# iso8601==0.1.12
+# isort==4.2.5
+# Jinja2==2.10
+# jinja2-time==0.2.0
+# jmespath==0.9.3
+# jsonpatch==1.21
+# jsonpointer==2.0
+# jsonschema==2.6.0
+# Keras==2.1.5
+# keystoneauth1==3.4.0
+# kiwisolver==1.0.1
+# kubernetes==1.0.2
+# lazy-object-proxy==1.2.2
+# linecache2==1.0.0
+# lockfile==0.12.2
+# logconfig==0.4.0
+# logutils==0.3.5
+# lxml==4.0.0
+# Markdown==2.6.11
+# MarkupSafe==1.0
+# marshmallow==2.13.5
+# matplotlib==2.2.2
+# mccabe==0.6.1
+# mock==2.0.0
+molecule==2.12.1
+# monotonic==1.4
+# msgpack==0.5.6
+# munch==2.2.0
+# mysqlclient==1.3.10
+# netaddr==0.7.19
+# netifaces==0.10.6
+# numpy==1.14.2
+# oauth2client==4.1.2
+# olefile==0.44
+# openshift==0.0.1
+# openstacksdk==0.12.0
+# orcid==1.0.0
+# os-client-config==1.29.0
+# os-service-types==1.2.0
+# os-testr==1.0.0
+# osc-lib==1.10.0
+# oslo.config==6.0.1
+# oslo.i18n==3.20.0
+# oslo.serialization==2.25.0
+# oslo.utils==3.36.0
+# packaging==17.1
+# paramiko==2.4.1
+# pathlib2==2.3.0
+# pathspec==0.5.5
+# pbr==4.0.0
+# pexpect==4.2.1
+# Pillow==4.1.1
+# pluggy==0.6.0
+# poyo==0.4.1
+# prettytable==0.7.2
+# protobuf==3.5.2.post1
+# psutil==5.2.2
+# ptyprocess==0.5.2
+# py==1.5.2
+# pyaml==17.12.1
+# pyasn1==0.4.2
+# pyasn1-modules==0.2.1
+# pycodestyle==2.3.1
+# pycparser==2.18
+# pycurl==7.43.0
+# pyflakes==1.5.0
+# pygobject==3.24.1
+# pylint==1.7.2
+# PyMySQL==0.8.0
+# PyNaCl==1.2.1
+# pyOpenSSL==16.2.0
+# pyparsing==2.2.0
+# pyperclip==1.6.0
+# pytest==3.4.2
+# python-apt==1.4.0b3
+# python-cinderclient==3.5.0
+# python-dateutil==2.7.2
+# python-gilt==1.1.0
+# python-glanceclient==2.9.1
+# python-keystoneclient==3.15.0
+# python-mimeparse==1.6.0
+# python-novaclient==10.1.0
+# python-openstackclient==3.15.0
+# python-string-utils==0.6.0
+# python-subunit==1.2.0
+# python-vagrant==0.5.14
+# pytz==2018.3
+# PyYAML==3.12
+requests==2.18.4
+requestsexceptions==1.4.0
+# rfc3986==1.1.0
+# rsa==3.4.2
+# ruamel.ordereddict==0.4.13
+# ruamel.yaml==0.15.35
+# scandir==1.5
+# scipy==1.0.1
+# scour==0.32
+# sh==1.12.14
+# shade==1.27.1
+# simple-logging==0.1.0
+# simplejson==3.13.2
+# singledispatch==3.4.0.3
+# six==1.11.0
+# stestr==2.0.0
+# stevedore==1.28.0
+# structlog==18.1.0
+# subprocess32==3.2.7
+# systemd-python==234
+# tabulate==0.7.7
+# tensorboard==1.7.0
+# tensorflow==1.7.0
+# termcolor==1.1.0
+# testinfra==1.7.1
+# testtools==2.3.0
+# texttable==0.8.8
+# traceback2==1.4.0
+# tree-format==0.1.2
+# unicodecsv==0.14.1
+# unittest2==1.1.0
+# urllib3==1.22
+# variety==0.6.6
+# virtualenv==15.2.0
+# voluptuous==0.11.1
+# warlock==1.3.0
+# webencodings==0.5
+# websocket-client==0.47.0
+# Werkzeug==0.14.1
+# whichcraft==0.4.1
+# wrapt==1.9.0
+# yamllint==1.11.0
