--- a/requirements.txt
+++ b/requirements.txt
@@ -86,6 +86,7 @@ dockerpty==0.4.1
 # MarkupSafe==1.0
 # marshmallow==2.13.5
 # matplotlib==2.2.2
+markdownlint
 # mccabe==0.6.1
 # mock==2.0.0
 molecule==2.12.1
@@ -132,6 +133,7 @@ molecule==2.12.1
 # pyflakes==1.5.0
 # pygobject==3.24.1
 # pylint==1.7.2
+pymarkdownlint==0.3.1
 # PyMySQL==0.8.0
 # PyNaCl==1.2.1
 # pyOpenSSL==16.2.0
