Better testing with rubocop and related Inspec profile (#15)
* Remove hard dependency on black panther

* Move control files to snake_case

* Fix Rubocop warnings

* ignore line length warnings

* Fix rubocop warnings in role_meta.rb

* Don't fail the build on rubocop warnings

* add final line to inspec.yml

* Fix yaml linting issues

* Add rubocop to then gemfile

* Address changes to #15 requested by @gwarf

* Update requirements - maybe this will work

* add pymarkdownlint to requirements

* Remove incorrect package markdownlint from requirements

* Remove comments from requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-molecule
-pymarkdownlint
-docker-py
+# absl-py==0.1.13
+ansible==2.5.0
+docker==2.7.0
+docker-compose==1.9.0
+docker-py==1.10.6
+docker-pycreds==0.2.2
+dockerpty==0.4.1
+molecule==2.12.1
+pymarkdownlint==0.3.1
+requests==2.18.4
+requestsexceptions==1.4.0
