--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: EGI Ansible Style Guide
 description: 'Community guide to developing re-usable Ansible products for EGI infrastructure'
-url: 'https://egi-foundation.github.io/ansible-style-guide'
-baseurl: 'https://egi-foundation.github.io/ansible-style-guide'
+url: 'https://egi-foundation.github.io/ansible-style-guide/'
+baseurl: 'https://egi-foundation.github.io/ansible-style-guide/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
