--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,76 @@
-# absl-py==0.1.13
 ansible==2.7.0
+ansible-lint==3.4.23
+anyconfig==0.9.7
+arrow==0.12.1
+asn1crypto==0.24.0
+atomicwrites==1.1.5
+attrs==18.1.0
+backports.functools-lru-cache==1.5
+backports.ssl-match-hostname==3.5.0.1
+bcrypt==3.1.4
+binaryornot==0.4.4
+cached-property==1.4.2
+Cerberus==1.2
+certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
+click==6.7
+click-completion==0.3.1
+colorama==0.3.9
+configparser==3.5.0
+cookiecutter==1.6.0
+cryptography==2.2.2
 docker==2.7.0
 docker-compose==1.9.0
 docker-py==1.10.6
 docker-pycreds==0.2.2
 dockerpty==0.4.1
-molecule==2.12.1
+docopt==0.6.2
+enum34==1.1.6
+fasteners==0.14.1
+flake8==3.5.0
+funcsigs==1.0.2
+functools32==3.2.3.post2
+future==0.16.0
+git-url-parse==1.1.0
+idna==2.6
+ipaddress==1.0.22
+Jinja2==2.10
+jinja2-time==0.2.0
+jsonschema==2.6.0
+MarkupSafe==1.0
+mccabe==0.6.1
+molecule==2.18.1
+monotonic==1.5
+more-itertools==4.2.0
+paramiko==2.4.1
+pathspec==0.5.6
+pbr==4.1.0
+pexpect==4.6.0
+pluggy==0.6.0
+poyo==0.4.1
+psutil==5.4.6
+ptyprocess==0.5.2
+py==1.5.3
+pyasn1==0.4.3
+pycodestyle==2.3.1
+pycparser==2.18
+pyflakes==1.5.0
 pymarkdownlint==0.3.1
-requests==2.18.4
+PyNaCl==1.2.1
+pytest==3.6.1
+python-dateutil==2.7.3
+python-gilt==1.2.1
+PyYAML==3.13
+requests==2.11.1
 requestsexceptions==1.4.0
+sh==1.12.14
+six==1.11.0
+tabulate==0.8.2
+testinfra==1.14.1
+texttable==0.8.8
+tree-format==0.1.2
+urllib3==1.22
+websocket-client==0.48.0
+whichcraft==0.4.1
+yamllint==1.11.1
