--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,16 @@ script:
   'Ansible Skeleton Directories' 'Ansible YAML main files'
 - cd $TEST_ROLE_PATH
 - molecule init scenario -r $TEST_ROLE_PATH
-- molecule test
+- molecule lint
+- molecule dependency
+- molecule syntax
+- molecule create
+- molecule prepare
+- molecule converge
+- molecule idempotence
+- molecule side_effect
+- molecule verify
+- molecule destroy
 after_success: 
 after_failure: 
 before_deploy: 
