--- a/requirements.txt
+++ b/requirements.txt
@@ -20,9 +20,8 @@ colorama==0.3.9
 configparser==3.5.0
 cookiecutter==1.6.0
 cryptography==2.2.2
-docker==3.5.0
-docker-compose==1.9.0
 docker-pycreds==0.3.0
+docker
 dockerpty==0.4.1
 docopt==0.6.2
 enum34==1.1.6
@@ -55,7 +54,7 @@ pyasn1==0.4.3
 pycodestyle==2.3.1
 pycparser==2.18
 pyflakes==1.5.0
-pymarkdownlint==0.3.1
+pymarkdownlint
 PyNaCl==1.2.1
 pytest==3.6.1
 python-dateutil==2.7.3
