--- a/requirements.txt
+++ b/requirements.txt
@@ -19,9 +19,9 @@ click-completion==0.3.1
 colorama==0.3.9
 configparser==3.5.0
 cookiecutter==1.6.0
-cryptography==2.2.2
+cryptography==2.5
+docker==3.5.0
 docker-pycreds==0.3.0
-docker
 dockerpty==0.4.1
 docopt==0.6.2
 enum34==1.1.6
@@ -38,10 +38,10 @@ jinja2-time==0.2.0
 jsonschema==2.6.0
 MarkupSafe==1.0
 mccabe==0.6.1
-molecule==2.18.1
+molecule==2.19.0
 monotonic==1.5
 more-itertools==4.2.0
-paramiko==2.4.1
+paramiko>=2.4.2
 pathspec==0.5.6
 pbr==4.1.0
 pexpect==4.6.0
@@ -54,21 +54,21 @@ pyasn1==0.4.3
 pycodestyle==2.3.1
 pycparser==2.18
 pyflakes==1.5.0
-pymarkdownlint
+pymarkdownlint==0.3.1
 PyNaCl==1.2.1
 pytest==3.6.1
 python-dateutil==2.7.3
 python-gilt==1.2.1
 PyYAML==3.13
-requests==2.19.1
+requests>=2.20.0
 requestsexceptions==1.4.0
 sh==1.12.14
 six==1.11.0
 tabulate==0.8.2
-testinfra==1.14.1
+testinfra==1.16.0
 texttable==0.8.8
 tree-format==0.1.2
-urllib3==1.22
+urllib3>=1.23
 websocket-client==0.48.0
 whichcraft==0.4.1
 yamllint==1.11.1
