--- a/.travis.yml
+++ b/.travis.yml
@@ -33,23 +33,31 @@ script:
 - echo $BUNDLE_PATH
 - ls -l $BUNDLE_PATH
 - find $BUNDLE_PATH -name inspec
+- find /home/travis -name inspec
+  find /home/travis/build/EGI-Foundation/ansible-style-guide/vendor/bundle/ -name inspec
 - bundle exec inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
   'Ansible Skeleton Directories' 'Ansible YAML main files'
 - inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
   'Ansible Skeleton Directories' 'Ansible YAML main files'
 - bundle install --verbose --path $(pwd)/vendor/bundle
+- bundle info inspec
+  ls -lR /home/travis/.rvm/gems/ruby-2.4.1/gems/inspec-4.3.2/
+  ls -lR /home/travis/build/EGI-Foundation/ansible-style-guide/vendor/bundle/
 - find $BUNDLE_PATH -name inspec
 - find /home/travis -name inspec
+  find /home/travis/build/EGI-Foundation/ansible-style-guide/vendor/bundle/ -name inspec
 - inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
   'Ansible Skeleton Directories' 'Ansible YAML main files'
-- bunlde inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
+- bundle inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
   'Ansible Skeleton Directories' 'Ansible YAML main files'
 - bundle install --verbose --binstubs
+- bundle info inspec
 - find $BUNDLE_PATH -name inspec
 - find /home/travis -name inspec
+  find /home/travis/build/EGI-Foundation/ansible-style-guide/vendor/bundle/ -name inspec
 - inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
   'Ansible Skeleton Directories' 'Ansible YAML main files'
-- bunlde inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
+- bundle inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
   'Ansible Skeleton Directories' 'Ansible YAML main files'
 - cd $TEST_ROLE_PATH
 - molecule init scenario -r $TEST_ROLE_PATH
