--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ addons:
 before_install:
 install:
 - pip install -r requirements.txt
-- bundle install --verbose
+- bundle install --binstubs --verbose --path $(pwd)/vendor/bundle
 before_script:
 - for file in `find . -maxdepth 2 -name "*.md"` ;  do markdownlint --ignore $MD_IGNORE
   $file ; done
@@ -25,35 +25,20 @@ before_script:
 script:
 - ansible-galaxy init -f --role-skeleton=egi-galaxy-template $TEST_ROLE_PATH
 - echo $PATH
-- pwd
-- find /home/travis -name inspec
 - where inspec
 - which inspec
+- bundle doctor
 - bundle info inspec
 - find /home/travis -name inspec
-  find /home/travis/build/EGI-Foundation/ansible-style-guide/vendor/bundle/ -name inspec
+- find /home/travis/build/EGI-Foundation/ansible-style-guide/vendor/bundle/ -name inspec
+- bundle exec inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
+  'Ansible Skeleton Directories' 'Ansible YAML main files'
 - bundle exec inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
   'Ansible Skeleton Directories' 'Ansible YAML main files'
 - inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
   'Ansible Skeleton Directories' 'Ansible YAML main files'
-- bundle install --verbose --path $(pwd)/vendor/bundle
-- bundle info inspec
-  ls -lR /home/travis/.rvm/gems/ruby-2.4.1/gems/inspec-4.3.2/
-  ls -lR /home/travis/build/EGI-Foundation/ansible-style-guide/vendor/bundle/
-- find /home/travis -name inspec
-  find /home/travis/build/EGI-Foundation/ansible-style-guide/vendor/bundle/ -name inspec
-- inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
-  'Ansible Skeleton Directories' 'Ansible YAML main files'
-- bundle inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
-  'Ansible Skeleton Directories' 'Ansible YAML main files'
-- bundle install --verbose --binstubs
-- bundle info inspec
-- find /home/travis -name inspec
-  find /home/travis/build/EGI-Foundation/ansible-style-guide/vendor/bundle/ -name inspec
-- inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
-  'Ansible Skeleton Directories' 'Ansible YAML main files'
-- bundle inspec supermarket exec brucellino/ansible-fashion-police --controls=Travis Meta
-  'Ansible Skeleton Directories' 'Ansible YAML main files'
+- ls -lR /home/travis/.rvm/gems/ruby-2.4.1/gems/inspec-4.3.2/
+- ls -lR /home/travis/build/EGI-Foundation/ansible-style-guide/vendor/bundle/
 - cd $TEST_ROLE_PATH
 - molecule init scenario -r $TEST_ROLE_PATH
 - molecule lint
