Install current stable ruby version using rvm to be able to use latest gems.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ cache:
   pip: true
   directories:
     - /home/travis/.rvm/
+    - vendor/bundle
 services:
 - docker
 env:
@@ -14,11 +15,8 @@ env:
   - TEST_ROLE_PATH=ansible-role-test/
   - GITHUB_REPO=$TRAVIS_REPO_SLUG
   - RUBOCOP_OPTS=--fail-level=error
-addons:
-  apt:
-    packages:
-    - ruby-full
 before_install:
+  - rvm install 2.6.3
 install:
 - pip install -r requirements.txt
 - bundle install
