Fix permalinks for some documentation pages (#39)
* Fix permalink for some documentation pages
* Fix travis building
* Fix security warnings

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 python:
 - '2.7'
 sudo: required
+cache:
+  pip: true
+  directories:
+    - /home/travis/.rvm/
 services:
 - docker
 env:
