--- a/docs/_data/header_links.yml
+++ b/docs/_data/header_links.yml
@@ -12,7 +12,7 @@
 - name: Docs
   title: Link to  Deploy page
   icon: fas fa-book
-  href: documentation
+  href: role-documentation
 
 - name: Contributing
   title: Link to Contributing page
